--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,12 @@
     font-weight: normal;
 }
 
+#container {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body {
     font-family: "raleway-regular", Arial, Helvetica, sans-serif;
 }
@@ -42,7 +48,7 @@ h3, h4 {
 }
 
 h2, h5 {
-    margin-left: 16px;
+    margin-left: 14px;
 }
 
 p, li {
@@ -68,10 +74,7 @@ strong {
 }
 
 header {
-    width: 90%;
-    margin: auto;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    margin: 24px 24px;
 }
 
 ul {
@@ -93,7 +96,7 @@ a {
 #nav_header a:hover {
     color: #0065FC;
     border-top: solid 1px #0065FC;
-    padding-top: 40px;
+    padding-top: 32px;
 }
 
 form, #information, #accomodation-section, .popular-accomodation {
@@ -146,7 +149,7 @@ label, input {
     border-right: solid 2px #F2F2F2;
     border-bottom: solid 2px #F2F2F2;
     border-radius: 50px 50px;
-    margin-left: 30px;
+    margin-left: 24px;
     padding-right: 16px;
 }
 
@@ -192,24 +195,22 @@ label, p, .fa-map-marker-alt {
 }
 
 #accomodation {
-    width: 70%;
-    margin-left: 5%;
-    margin-right: 32px;
-    padding: 16px 32px 0px;
+    width: 80%;
+    margin: 0px 24px 0px 24px;
+    padding: 16px 16px 8px;
     background-color: #F2F2F2;
     border-radius: 16px 16px;
 }
 
 article, #activity {
-    width: auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .accomodation_image {
-    width: 196px;
-    height: 100px;
+    width: 168px;
+    height: 90px;
     border-radius: 15px 15px 1px 1px;
 }
 
@@ -220,13 +221,13 @@ article, #activity {
 .accomodation-border, .popular-accomodation-border {
     background-color: white;
     border-radius: 20px 20px;
-    margin: 10px 10px;
+    margin: 8px 8px;
     padding: 5px 5px;
 }
 
 aside {
-    margin-right: 5%;
-    padding: 16px 24px 0px;
+    margin-right: 24px;
+    padding: 16px 16px 0px;
     background-color: #F2F2F2;
     border-radius: 16px 16px;
 }
@@ -242,12 +243,13 @@ aside {
 }
 
 .fa-chart-line {
-    margin-top: 15px;
+    margin-top: 16px;
+    margin-right: 12px;
 }
 
 .popular_image {
-    width: 120px;
-    height: 120px;
+    width: 110px;
+    height: 110px;
     margin-right: 16px;
     border-radius: 15px 1px 1px 15px;
 }
@@ -268,10 +270,7 @@ aside {
 }
 
 #activity-section {
-    width: 90%;
-    margin: auto;
-    margin-top: 48px;
-    margin-bottom: 16px;
+    margin: 40px 24px 16px 24px;
 }
 
 .activity-border {
@@ -279,7 +278,7 @@ aside {
     background-color: white;
     border-radius: 16px 16px;
     box-shadow: 10px 5px 5px #F2F2F2;
-    margin: 16px 16px 32px;
+    margin: 16px 8px 16px;
 }
 
 .activity_description {
@@ -290,7 +289,7 @@ aside {
 
 .activity_image {
     border-radius: 15px 15px 1px 1px;
-    width: 250px;
+    width: 220px;
 }
 
 .activity_sm-size {
@@ -298,15 +297,15 @@ aside {
 }
 
 .activity_md-size {
-    height: 160px;
+    height: 140px;
 }
 
 .activity_half-size {
-    height: 130px;
+    height: 120px;
 }
 
 .activity_lg-size {
-    height: 330px;
+    height: 296px;
 }
 
 footer {
@@ -321,163 +320,106 @@ p {
     padding-bottom: 5px;
 }
 
-@media only screen and (max-width : 320px) {
-    h1 {
-        margin-bottom: 10px;
+@media only screen and (min-width : 768px) and (max-width : 1023px) {
+    #container {
+        width: 750px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    h2, h5 {
-        margin-left: 16px;
+    header {
+        margin-left: 32px;
+        margin-right: 32px;
     }
-
-    h3 {
-        margin-top: 8px;
-    }
-
-    #nav_header, #clic-research {
+    
+    #inscription {
         display: none;
     }
 
-    #header-nav {
-        display: flex;
-        align-items: center;
-        margin-bottom: 16px;
-    }
-
-    #nav-mobile {
-        display: block;
-    }
-
-    #inscription {
-        display: flex;
-        justify-content: flex-end;
-    }
-    
-    #accomodation-activity {
-        display: flex;
-        justify-content: space-around;
-        margin-bottom: 32px;
-    }
-
-    #accomodation-activity a {
-        border-top: none;
-        padding-bottom: 16px;
-        border-bottom: solid 2px #F2F2F2;
-        flex: 1;
-        text-align: center;
-    }
-
-    #accomodation-activity a:hover {
-        padding-top: 0px;
-        border-bottom: solid 2px #0065FC;
-    }
-
-    #research-button {
-        border: #F2F2F2 solid 1px;
-        border-right: none;
-        padding-right: 40px;
-    }
-
-    .fa-search {
-        display: flex;
-        align-items: center;
-        color: white;
-        border: #0065FC 1px solid;
-        background-color: #0065FC;
-        border-radius: 1px 10px 10px 1px;
-        padding: 10px;
-        cursor: pointer;
-    }
-
     .filter {
-        display: inline-block;
-        margin: 0px 2px 8px 0px;
-        padding-right: 8px;
-    }
-
-    #filter-form {
-        display: inline-block;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin-left: 12px;
+        padding-right: 14px;
     }
 
     input {
-        padding-left: 8px;
+        padding-left: 12px;
+        padding-right: 0px;
     }
 
-    label {
-        margin-bottom: 16px;
+    aside {
+        margin-left: 32px;
+        margin-right: 32px;
+        padding: 0px 0px;
     }
 
-    .fa-info {
-        display: flex;
-        align-items: flex-start;
+    #popular {
+        padding: 16px 16px;
     }
 
-    .fa-chart-line:before {
-        padding-right: 8px;
-    }
-
-    .accomodation_image, .activity_image {
+    .popular_image {
         width: 260px;
-        height: 110px;
+        margin-right: 14px;
     }
 
-    #accomodation, #activity-section {
-        width: auto;
-        background-color: #FFF;
-        padding: 16px 0px;
-        margin-left: 0px;
-        margin-right: 0px;
+    .popular-accomodation-border {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    article {
+        padding: 0px 0px;
     }
 
     #accomodation-section {
         display: flex;
         flex-direction: column-reverse;
-        padding-bottom: 0px;
     }
 
+    #accomodation {
+        width: auto;
+        margin: 16px 24px 0px;
+        padding: 8px 0px 0px;
+        background-color: #FFF;
+    }
+    
+    .accomodation_image {
+        height: 120px;
+    }
+
+    .accomodation_image, .activity_image {
+        width: 325px;
+    }
+    
     .accomodation-border, .activity-border {
-        box-shadow: 8px 8px 8px #F2F2F2;
         margin: 8px 8px;
-    }
-
-    aside {
-        margin-right: 0px;
-        padding: 8px 8px;
-        border-radius: inherit;
-    }
-
-    .popular_image {
-        padding-top: 4px;
-    }
-
-    .popular-accomodation {
-        margin-bottom: 0px;
-        padding-top: 0px;
+        box-shadow: 8px 8px 8px #F2F2F2;
     }
 
     #activity-section {
-        width: auto;
-        margin-top: 0px;
-        padding-top: 0px;
+        margin: 0px 24px;
+    }
+
+    .activity_md-size, .activity_sm-size {
+        height: 120px;
     }
 
     footer {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        padding: 16px 16px;
+        margin-top: 16px;
+        padding: 16px 48px ;
     }
 }
 
-@media only screen and (min-width : 321px) and (max-width : 691px) {
+@media only screen and (max-width : 767px) {
+    #container {
+        width: 375px;
+    }
+    
     h1 {
         margin-bottom: 10px;
     }
 
     h2, h5 {
-        margin-left: 16px;
+        margin-left: 20px;
     }
 
     h3 {
@@ -569,7 +511,7 @@ p {
     }
 
     .accomodation_image, .activity_image {
-        width: 320px;
+        width: 330px;
         height: 110px;
     }
 
@@ -594,7 +536,7 @@ p {
 
     aside {
         margin-right: 0px;
-        padding: 8px 8px;
+        padding: 8px 8px 24px;
         border-radius: inherit;
     }
 
@@ -603,7 +545,7 @@ p {
     }
 
     .popular-accomodation {
-        margin-bottom: 0px;
+        margin: 0px 14px 8px;
         padding-top: 0px;
     }
 
@@ -618,175 +560,5 @@ p {
         flex-direction: column;
         flex-wrap: wrap;
         padding: 16px 16px;
-    }
-}
-
-@media only screen and (min-width : 692px) and (max-width : 767px) {    
-    h2, h5 {
-        margin-left: 48px;
-    }
-
-    input {
-        padding-left: 8px;
-    }
-
-    .filter {
-        display: inline-block;
-        margin: 16px 8px 0px 0px;
-        padding-right: 8px;
-    }
-
-    #filter-form {
-        display: inline-block;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    #accomodation-section {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    aside {
-        margin-right: 0px;
-        padding: 0px 0px;
-        border-radius: inherit;
-    }
-
-    .fa-chart-line:before {
-        margin-right: 40px;
-    }
-
-    #popular {
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-
-    .popular_image {
-        width: 260px;
-    }
-
-    .popular-accomodation-border {
-        margin-right: 40px;
-        margin-left: 40px;
-    }
-
-    #accomodation {
-        width: auto;
-        background-color: #FFF;
-        padding: 8px 0px 0px;
-        margin: 16px 0px 0px;
-    }
-
-    .accomodation-border {
-        box-shadow: 8px 8px 8px #F2F2F2;
-    }
-
-    .accomodation_image, .activity_image {
-        width: 310px;
-    }
-
-    #activity-section {
-        width: auto;
-        margin: 0px 0px 16px;
-    }
-
-    .activity_sm-size {
-        height: 120px;
-    }
-    
-    .activity_md-size {
-        height: 180px;
-    }
-    
-    .activity_half-size {
-        height: 150px;
-    }
-    
-    .activity_lg-size {
-        height: 360px;
-    }
-}
-
-@media only screen and (min-width : 768px) and (max-width : 1023px) {
-    h2, h5 {
-        margin-left: 48px;
-    }
-    
-    #inscription {
-        display: none;
-    }
-
-    .filter {
-        margin-left: 10px;
-    }
-
-    input {
-        padding-left: 8px;
-    }
-
-    article {
-        width: auto;
-        margin: 20px 30px;
-        padding: 0px 0px;
-    }
-
-    #accomodation-section {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-
-    #accomodation {
-        width: auto;
-        margin: 16px 0px 0px;
-        padding: 8px 0px 0px;
-        background-color: #FFF;
-    }
-
-    .accomodation_image {
-        width: 202px;
-    }
-    
-    .accomodation-border {
-        margin: 8px 8px;
-        box-shadow: 8px 8px 8px #F2F2F2;
-    }
-
-    aside {
-        margin-right: 0px;
-        padding: 0px 0px;
-        border-radius: inherit;
-    }
-
-    .fa-chart-line:before {
-        margin-right: 40px;
-    }
-
-    #popular {
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-
-    .popular_image {
-        width: 260px;
-        margin-right: 16px;
-    }
-
-    .popular-accomodation-border {
-        margin-right: 40px;
-        margin-left: 40px;
-    }
-
-    #activity-section {
-        width: auto;
-        margin-top: 0px;
-    }
-
-    .activity_image {
-        width: 310px;
-    }
-
-    .activity-border {
-        margin: 16px 16px;
     }
 }
